{
    "name": "PlayerController",
    "maps": [
        {
            "name": "Player",
            "id": "ec2a23e9-ff03-46f5-9654-9dc80ed3afa9",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a2320372-a475-4671-90e4-fec28a370763",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7eea5bbf-a350-4666-ba6a-2862a2159026",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}